[project]
name = "pybennu"
version = "6.0.0"
description = "bennu python providers and utilities"
authors = [
    { name = "Sandia National Laboratories", email = "emulytics@sandia.gov" },
]
license = "GPL-3.0-or-later"
requires-python = ">=3.10,<4.0"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3.10',                      # Ubuntu 22 (jammy)
    'Programming Language :: Python :: Implementation :: CPython',
]
dependencies = [
    # Elasticsearch client versions are forward-compatible
    # with the next major version, but are NOT backward-compatible with major versions.
    # They ARE backward-compatible with minor versions (e.g. 8.x)
    # https://www.elastic.co/docs/reference/elasticsearch/clients/python#_compatibility
    'elasticsearch<9.0.0',
    'matplotlib>=1.5.3',
    'networkx>=1.11',
    'numpy>=1.11.2',
    'opendssdirect.py~=0.6.1',
    'py-expression-eval==0.3.14',
    'PYPOWER==5.1.19',
    'pyserial>=3.4',
    'PyYAML>=3.12',
    'requests>=2.20',
    'scipy>=1.15.0',
    'labjack-ljm~=1.23.0',
    # NOTE: need at least pymodbus 3+. The version in apt
    # for ubuntu 22.04 is 2.1.0, which is too old.
    # NOTE: pymodbus 3.9.0 informally dropped support for Python 3.9
    'pymodbus>=3.8.0,<=3.9.2',
    'pydantic>2.0.0,<3.0.0',
    # NOTE: pydantic-settings 2.9.0 dropped support for Python 3.8
    'pydantic-settings',
    'bitarray;platform_system=="Linux"',        # ==2.3.2
    'sysv_ipc==1.1.0;platform_system=="Linux"',
    # force install the below from source so they are built with the
    # local libzmq libraries with draft support
    'pyzmq @ git+https://github.com/zeromq/pyzmq.git@v27.1.0',
    'helics @ git+https://github.com/GMLC-TDC/pyhelics.git@v3.6.1',
]

[project.urls]
Repository = "https://github.com/sandialabs/sceptre-bennu"

[project.scripts]
pybennu-power-solver = "pybennu.providers.power.power_daemon:server"
pybennu-power-load-forecaster = "pybennu.providers.power.utils.power_load_forecaster:server"
pybennu-sel-ams-reader = "pybennu.providers.power.utils.sel.sel_ams_reader:server"
pybennu-sel-ams-writer = "pybennu.providers.power.utils.sel.sel_ams_writer:server"
pybennu-groundtruth-monitor = "pybennu.analytics.groundtruth_monitor:main"
pybennu-test-ep-server = "pybennu.executables.pybennu_test_ep_server:main"
pybennu-test-ep-server-helics = "pybennu.executables.pybennu_test_ep_server_helics:main"
pybennu-test-subscriber = "pybennu.executables.pybennu_test_subscriber:main"
pybennu-probe = "pybennu.executables.pybennu_probe:main"
pybennu-alicanto = "pybennu.executables.pybennu_alicanto:main"
pybennu-siren = "pybennu.siren.siren:main"

[tool.uv.build-backend]
module-root = "."

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
