option(BUILD_TEST_EXECUTABLES "Build test programs?" ON)
if (BUILD_TEST_EXECUTABLES)
  add_subdirectory(test-programs)
endif (BUILD_TEST_EXECUTABLES)
add_subdirectory(bennu-probe)
add_subdirectory(bennu-field-device)
add_subdirectory(daemon)
add_subdirectory(bennu-brash)
add_subdirectory(bennu-simulink-provider)
add_subdirectory(bennu-simulink-provider-helics)
